# Eul45-omni-search

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: android.yml  main.yml  signpath-origin-test.yml  signpath-production-signing.yml
.signpath/policies/omni-search/: release-signing.yml
android/: .gitignore  README.md  TestURI.java  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_notification_close.xml  ic_notification_favorite.xml  ic_notification_favorite_border.xml  ic_widget_document.xml  ic_widget_download.xml  ic_widget_folder.xml  ic_widget_image.xml  ic_widget_music.xml  ic_widget_phone.xml  ic_widget_qr.xml  preview_widget_explorer.xml  preview_widget_scan.xml  preview_widget_search.xml  splash_background.xml  widget_bg.xml  widget_bg_dark.xml  widget_bg_gradient_berry.xml  widget_bg_gradient_crimson.xml  widget_bg_gradient_forest.xml  widget_bg_gradient_ocean.xml  widget_bg_gradient_sunset.xml  widget_bg_gradient_twilight.xml  widget_bg_light.xml  widget_bg_rounded.xml  widget_search_bg_dark.xml  widget_search_bg_gradient_berry.xml  widget_search_bg_gradient_crimson.xml  widget_search_bg_gradient_forest.xml  widget_search_bg_gradient_ocean.xml  widget_search_bg_gradient_sunset.xml  widget_search_bg_gradient_twilight.xml  (+1 more)
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/cpp/: scanner.cpp
src-tauri/src/: desktop.rs  lib.rs  sync_server.rs
(+54 files in other folders)
